assets/css/home.css
/* HOME */


/* --------------------------------------------------------- bookmarks */

.bookmark {
    display: flex;
    gap: var(--spacing);
}

a.bookmark {
    display: block;
    white-space: nowrap;
    max-width: 10em;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* currently selected bookmark */
a.bookmark[data-current="1"] {
    background-color: var(--outline-background-color);
    color: var(--outline-color);
    padding: var(--half-spacing) var(--spacing);
    border-radius: var(--radius);
}


/* --------------------------------------------------------- filters */

/* for tags and authors, manage space between label and counter  */
.field .label-with-counter {
    display: flex;
}

.field .label-with-counter .label {
    flex:1;
    text-overflow: ellipsis;
    overflow: hidden;
}

.field .label-with-counter .counter {
    border-radius: 100%;
    width: 1.2em;
    height: 1.2em;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: var(--size-small);
}

fieldset.tag input[type="radio"], fieldset.authors input[type="radio"] {
    /* make input/label closer on authors and tags radios */
    margin-right: -2px;
}

td label, td time,
td.tag, td.description {
    white-space: nowrap;
}

details#display input[type="color"] {
    /* limit color input height widthin Display dropdown */
    height: 1.5em;
}


/* --------------------------------------------------------- deep search */

div#deepsearchbar {
    background-color: var(--secondary-background-color);
    padding: var(--spacing);
}

#deepsearchbar input[type=text] {
    width: 150px;
}

#deepsearchbar details, #deepsearchbar summary {
    display: inline;
}

/* --------------------------------------------------------- list view */

main table td.id label {
    font-family: monospace;
    font-size: 0.9em;
}

#home2table a.linkto {
    font-family: monospace;
    font-size: var(--size-small);
    background-color: var(--main-color);
    color: var(--text2-color);
    text-wrap: nowrap;
    padding: 0 var(--padding);
    border-radius: var(--radius);
}

table td a.tag, table a.author {
    border-radius: 10px;
    padding: 1px 4px;
}

table td a.author {
    background-color: var(--button-background-color);
    color: var(--button-color);
}

table td a.secure{
    padding: 1px 3px;
    color: black;
}

table a.secure.private {
    background-color: #b9b67b;
}

table a.secure.not_published {
    background-color: #b97b7b;
}

table td a.secure.public {
    background-color: #80b97b;
}

table .favicon img {
    height: 16px;
    max-width: 32px;
}

td.title {
    max-width: 150px;
    overflow: hidden;
    text-overflow: ellipsis;
}


/* --------------------------------------------------------- graph view */

main div#graph {
    height: 100%;
    width: 100%;
}


/* --------------------------------------------------------- map view */

#map,
#geomap {
    width: 100%;
    height: 100%;
}
#map p {
    padding: var(--spacing);
}
.leaflet-control-container {
    position: absolute;
}


/* --------------------------------------------------------- media queries */

@media (pointer: coarse) {

    aside #save-workspace {
        display: none;
    }
    a.bookmark .icon {
        font-size: 120%;
    }
    td.edit a, td.read a, td.delete a, td.download a {
        margin: 0 5px;
    }
    #deepsearchbar summary {
        font-size: 22px;
        padding: 0 10px;
    }
}

